load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "query",
    srcs = [
        "assemble.go",
        "base.go",
        "calc.go",
        "calc_string.go",
        "create.go",
        "delete.go",
        "errors.go",
        "errortype_string.go",
        "exec.go",
        "fieldop_string.go",
        "fields.go",
        "memo.go",
        "migrate.go",
        "opt.go",
        "query.go",
        "retrieve.go",
        "update.go",
        "where.go",
    ],
    importpath = "github.com/arya-analytics/aryacore/pkg/util/query",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util/errutil",
        "//pkg/util/model",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_test(
    name = "query_test",
    srcs = [
        "base_test.go",
        "errors_test.go",
        "fields_test.go",
        "memo_test.go",
        "migrate_test.go",
        "query_suite_test.go",
        "query_test.go",
        "retrieve_test.go",
        "update_test.go",
        "where_test.go",
    ],
    deps = [
        ":query",
        "//pkg/models",
        "//pkg/util/model",
        "//pkg/util/model/mock",
        "//pkg/util/query/mock",
        "@com_github_google_uuid//:uuid",
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
    ],
)
